envoy/envoy-ext-authz-config.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: http1
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/status"
                          route:
                            cluster: simple-httpapp
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      grpc_service:
                        envoy_grpc:
                          cluster_name: envoy-ext-authz-server
                  - name: envoy.filters.http.router
  clusters:
    - name: envoy-ext-authz-server
      connect_timeout: 10s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: envoy-als-server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      port_value: 8080
                      address: envoy-ext-authz-server-svc.ext-authz-server.svc.cluster.local
                      ipv4_compat: true
    - name: simple-httpapp
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: simple-httpapp
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      port_value: 8080
                      address: simple-httpapp-v1-svc.v1
                      ipv4_compat: true
              - endpoint:
                  address:
                    socket_address:
                      port_value: 8080
                      address: simple-httpapp-v2-svc.v2
                      ipv4_compat: true
